tests/test_default/bad/conflict.catala_en
## Article

```catala
declaration scope A:
  context x content integer

scope A:
  definition x under condition true consequence equals 1
  definition x under condition true consequence equals 0
```

```catala-test-inline
$ catala Interpret -s A
[WARNING] In scope "A", the variable "x" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_default/bad/conflict.catala_en:5.11-5.12:
└─┐
5 │   context x content integer
  │           ‾
  └─ Article
[ERROR] There is a conflict between multiple valid consequences for assigning the same variable.

This consequence has a valid justification:
┌─⯈ tests/test_default/bad/conflict.catala_en:8.56-8.57:
└─┐
8 │   definition x under condition true consequence equals 1
  │                                                        ‾
  └─ Article

This consequence has a valid justification:
┌─⯈ tests/test_default/bad/conflict.catala_en:9.56-9.57:
└─┐
9 │   definition x under condition true consequence equals 0
  │                                                        ‾
  └─ Article
#return code 255#
```
